--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="table-container">
         <div class="header-masjid">
-            <img src="logo.png" alt="Logo Masjid" class="logo-rasmi">
+            <img src="logo.png" alt="Logo Peribadi" class="logo-rasmi">
             <h1>Masjid Kampung Sungai Lang Baru</h1>
             <hr class="garis-hiasan">
             <h2>JADUAL TUGASAN RAMADHAN 1447H / 2026M (SAYA)</h2>
