--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <td class="day-cell">AHAD</td>
                     <td class="status-ok">✅ (22 Feb)</td>
                     <td class="empty">-</td>
-                    <td class="status-ok">✅ (8 Mac)</td>
+                    <td class="status-half">🌓 Half-Half (8 Mac)</td>
                     <td class="status-half">🌓 Half-Half (15 Mac)</td>
                     <td class="empty">-</td>
                 </tr>
@@ -99,6 +99,7 @@
                 <li>🗓️ <b>Surau Darul Iman:</b> 3 Slot (28 Feb, 14 Mac, 19 Mac)</li>
                 <li>🏫 <b>SMK Jugra:</b> 1 Slot (6 Mac)</li>
                 <li>🎤 <b>Tazkirah:</b> 4 Slot (Selasa/Khamis)</li>
+                <li>🌓 <b>Half-Half:</b> 3 Slot (18 Feb, 8 Mac, 15 Mac)</li>
                 <li>🫆 <b>Status 🫆:</b> 5 Slot</li>
             </ul>
         </div>
