--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jadual Tugas Ramadhan 1447H - Saya</title>
+    <title>Jadual Tugas Ramadhan Aiman</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,9 +11,9 @@
     <div class="table-container">
         <div class="header-masjid">
             <img src="logo.png" alt="Logo Peribadi" class="logo-rasmi">
-            <h1>Masjid Kampung Sungai Lang Baru</h1>
+            <h1>Selamat Bertugas Ramadhan Kareem</h1>
             <hr class="garis-hiasan">
-            <h2>JADUAL TUGASAN RAMADHAN 1447H / 2026M (SAYA)</h2>
+            <h2>RINGKASAN TUGAS RAMADHAN AIMAN</h2>
         </div>
 
         <div class="no-print" style="text-align: right; margin-bottom: 15px;">
